@@ -1,6 +1,5 @@
 # Generated by roxygen2: do not edit by hand
 
-S3method(as.data.frame,expressionset)
 export("created<-")
 export("description<-")
 export("label<-")
@@ -44,6 +43,7 @@ exportMethods("label<-")
 exportMethods("names<-")
 exportMethods("origin<-")
 exportMethods(aggregate)
+exportMethods(as.data.frame)
 exportMethods(barplot)
 exportMethods(compare)
 exportMethods(length)
