@@ -4,7 +4,8 @@ version 0.2.0
 - validaton rules can now contain embedded if-statements, e.g. A | (if (B) C)
 - results of getter functions (e.g. 'labels') are now named.
 - less verbose printng of options for expressionset objects (validator, indicator)
-- expressionset objects (validator, indicator) can now be coerced with as.data.frame.
+- expressionset objects (validator, indicator) can now be coerced to as.data.frame.
+- confrontation objects (validation, indication) can now be coerced to data.frame.
 - safer expression manipulation under the hood.
 
 
